--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
+    "victory": "^37.3.6",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -37,6 +38,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
-    "vite": "^7.0.6"
+    "vite": "^6.0.0"
   }
 }
