--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.43.1",
     "vite": "^6.0.0"
   }
 }
